# glfw-demo

./: CMakeLists.txt  opengl学习文档.txt
glad/include/glad/: glad.h
glad/src/: glad.c
main/: main.c  main.cpp  opengl-examples.c  opengl-examples.cpp  opengl-examples.h  rectangle.c  rectangle.h  triangle.c  triangle.h  utils.c
